# noise

./: .gitignore  .gitmodules  LICENSE  README.md  README.template  README_TEMPLATE.md  build.gradle  sample-devel-debug-0.5-devel.apk  sample-devel-release-0.5-devel.apk  sample-devel-release-devel-0.5-devel.apk  settings.gradle  todo.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
cpp_test_data_suite/: .gitignore  CMakeLists.txt  kiss_fft_tester.cpp  run.sh
gradle/wrapper/: gradle-wrapper.properties
noise/: CMakeLists.txt  bintray.gradle  bintray.properties  build.gradle  proguard-rules.pro
noise/src/main/: AndroidManifest.xml
noise/src/main/java/com/paramsen/noise/: Func1.java  FuncO1.java  Noise.java  Noise.kt  NoiseBuilder.kt  NoiseNativeBridge.java  NoiseNativeBridge.kt  NoiseOptimized.java  NoiseThreadSafe.java
noise/src/main/native/: noise.c
sample/: POLICY  build.gradle  debug.jks
sample/prod/release/: NoiseDemo-0.9-prod-release.apk  NoiseDemo-1.1-prod-release.apk  output.json
sample/release/: output.json  sample-release.apk
sample/src/main/: AndroidManifest.xml
sample/src/main/res/anim/: nudge.xml
sample/src/main/res/drawable/: ic_github.xml  ic_sentiment_very_satisfied_white_24dp.xml  tip_bg.xml
sample/src/main/res/layout/: activity_main.xml  view_info.xml  view_tip.xml
sample/src/main/res/menu/: menu.xml
sample/src/main/res/values-v21/: styles.xml
tester/: build.gradle
tester/src/main/: AndroidManifest.xml
(+26 files in other folders)
